@@ -1,0 +1,33 @@
+id: inconsistent_search_index
+name: 'Inconsistent search index'
+description: 'An index used for testing'
+read_only: false
+field_settings:
+  unknown_property:
+    label: 'Unknown property'
+    type: integer
+    datasource_id: 'entity:entity_test_mulrev_changed'
+    property_path: unknown_property
+processor_settings:
+  add_url:
+    weights:
+      preprocess_index: -30
+  aggregated_field:
+    weights:
+      add_properties: 20
+  search_api_test: {  }
+options:
+  cron_limit: -1
+  index_directly: false
+datasource_settings:
+  'entity:entity_test_mulrev_changed': {  }
+tracker_settings:
+  'default': { }
+server: inconsistent_search_server
+status: true
+langcode: en
+dependencies:
+  config:
+    - search_api.server.inconsistent_search_server
+  module:
+    - entity_test
