@@ -1,0 +1,9 @@
+name: 'Search API Inconsistent Configs Test'
+type: module
+description: 'Support module for Search API tests'
+package: Search
+dependencies:
+  - search_api:search_api
+  - search_api:search_api_test
+core: 8.x
+hidden: true
